--- a/contact.html
+++ b/contact.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Contactenos</title>
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="Shortcut Icon" type="image/x-icon" href="assets/icons/shortcut-icon.ico" />
-	<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="js/jquery-1.11.2.min.js"><\/script>')</script>
-	<script src="js/modernizr.js"></script>
-	<script src="js/main.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Contactenos</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="Shortcut Icon" type="image/x-icon" href="assets/icons/shortcut-icon.ico" />
+    <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/jquery-1.11.2.min.js"><\/script>')</script>
+    <script src="js/modernizr.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </head>
+
 <body>
     <div class="page-container">
         <nav class="full-reset nav-phonestore">
-           <div class="logo tittles-pages">
-                PhoneStore 
-           </div>
+            <div class="logo tittles-pages">
+                ElectroCarly
+            </div>
             <ul class="list-unstyled full-reset navigation-list">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="product.html">Productos</a></li>
@@ -37,29 +39,41 @@
                     <div class="row">
                         <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0">
                             <div class="well">
-                                <h3 class="text-center" style="font-family: 'Lobster', cursive; font-size: 27px;">Dirección</h3>
+                                <h3 class="text-center" style="font-family: 'Lobster', cursive; font-size: 27px;">
+                                    Dirección</h3>
                                 <address>
-                                  <strong>Pais:</strong> Tu país<br>
-                                  <strong>Dirección:</strong> Tu dirección<br>
-                                  <strong>Ciudad:</strong> Tu ciudad<br>
-                                  <strong>Email:</strong> tucorreo@info.com
+                                    <strong>Pais:</strong> Bolivia<br>
+                                    <strong>Dirección:</strong> Av. Los robles Zona sur XD<br>
+                                    <strong>Ciudad:</strong> La Paz<br>
+                                    <strong>Email:</strong> ElectroCarly@gmail.com
                                 </address>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-7">
                             <div class="well">
-                                <h3 class="tittles-pages text-center">Más info de contacto</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta velit ducimus aut tempore blanditiis assumenda totam eius optio id minima labore natus ex ratione maxime, iusto fuga omnis dolorum libero?
-                                </p>
+                                <h3 class="text-center" style="font-family: 'Lobster', cursive; font-size: 27px;">
+                                    Contacto</h3>
+                                <address>
+                                    <strong>Teléfono:</strong> +591 2 123 4567<br>
+                                    <strong>WhatsApp:</strong> +591 71234567<br>
+                                    <strong>Horario de Atención:</strong><br>
+                                    Lunes a Viernes: 8:00 AM - 6:00 PM<br>
+                                    Sábados: 9:00 AM - 2:00 PM<br>
+                                    Domingos: Cerrado<br>
+                                </address>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-12 col-md-4 col-md-push-8">
-                            <h2 class="tittles-pages text-center">Info pedidos</h2>
+                            <h2 class="tittles-pages text-center">💡 ¡Todo lo que necesitas en un solo lugar!</h2>
                             <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi quidem ipsum atque numquam, sint odio nesciunt laborum repellat tenetur commodi beatae a, officia praesentium eius fuga illum totam veniam velit.
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, nam ipsum dolores ut nesciunt sequi iste vitae iusto, unde placeat veniam quis earum atque omnis optio praesentium! Officia, ipsum, neque.
+                                En <b>ElectroCarly</b>, estamos aquí para ayudarte. ¿Buscas accesorios para tu celular,
+                                necesitas reparar tu dispositivo o tienes problemas con una entrega? Escríbenos a
+                                nuestro correo ElectroCarly@gmail.com y recibe atención personalizada. Desde repuestos
+                                originales hasta soluciones rápidas para tus pedidos, nuestro equipo está listo para
+                                brindarte la mejor experiencia. ¡En ElectroCarly, resolver tus necesidades es nuestra
+                                prioridad! 🚀
                             </p>
                         </div>
                         <div class="col-xs-12 col-md-8 col-md-pull-4">
@@ -67,26 +81,29 @@
                             <form class="form-horizontal" role="form">
                                 <div class="form-group">
                                     <label class="control-label col-sm-2">Tu nombre</label>
-                                    <div class="col-sm-10">	
-                                        <input type="text" class="form-control input-form-contact" placeholder="Escribe tu nombre">
+                                    <div class="col-sm-10">
+                                        <input type="text" class="form-control input-form-contact"
+                                            placeholder="Escribe tu nombre">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="control-label col-sm-2">Tu Email</label>
-                                    <div class="col-sm-10">	
-                                        <input type="email" class="form-control input-form-contact" placeholder="Escribe tu Email">
+                                    <div class="col-sm-10">
+                                        <input type="email" class="form-control input-form-contact"
+                                            placeholder="Escribe tu Email">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="control-label col-sm-2">Asunto</label>
-                                    <div class="col-sm-10">	
+                                    <div class="col-sm-10">
                                         <input type="text" class="form-control input-form-contact" placeholder="Asunto">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="control-label col-sm-2">Tu mensaje</label>
-                                    <div class="col-sm-10">	
-                                        <textarea class="form-control input-form-contact" rows="3" placeholder="Escribe tu mensaje"></textarea>
+                                    <div class="col-sm-10">
+                                        <textarea class="form-control input-form-contact" rows="3"
+                                            placeholder="Escribe tu mensaje"></textarea>
                                     </div>
                                 </div>
                                 <button type="submit" class="btn btn-primary pull-right">Enviar</button>
@@ -94,16 +111,16 @@
                         </div>
                     </div>
                 </div>
-            </section> 
+            </section>
         </div>
-    	<footer class="footer">
+        <footer class="footer">
             <div class="container-fluid">
                 <div class="col-xs-12 text-center">
                     <h3>Siguenos en</h3>
                     <ul class="list-unstyled list-social-icons">
-                        <li >
+                        <li>
                             <a href="#!">
-                               <i class="fa fa-facebook" style="background-color: #3B5998;"></i> 
+                                <i class="fa fa-facebook" style="background-color: #3B5998;"></i>
                             </a>
                         </li>
                         <li>
@@ -113,7 +130,7 @@
                         </li>
                         <li>
                             <a href="#!">
-                                <i class="fa fa-twitter"  style="background-color: #56A3D9;"></i>
+                                <i class="fa fa-twitter" style="background-color: #56A3D9;"></i>
                             </a>
                         </li>
                         <li>
@@ -122,10 +139,11 @@
                             </a>
                         </li>
                     </ul>
-                    <h4>PhoneStore &copy; 2016</h4>
+                    <h4>ElectroCarly &copy; 2024</h4>
                 </div>
             </div>
-        </footer>  
+        </footer>
     </div>
 </body>
+
 </html>
