--- a/news.html
+++ b/news.html
@@ -20,7 +20,7 @@
     <div class="page-container">
         <nav class="full-reset nav-phonestore">
            <div class="logo tittles-pages">
-                PhoneStore 
+            ElectroCarly 
            </div>
             <ul class="list-unstyled full-reset navigation-list">
                 <li><a href="index.html">Inicio</a></li>
@@ -113,7 +113,7 @@
                             </a>
                         </li>
                     </ul>
-                    <h4>PhoneStore &copy; 2016</h4>
+                    <h4>ElectroCarly &copy; 2024</h4>
                 </div>
             </div>
         </footer>
