--- a/services.html
+++ b/services.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Servicios</title>
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="Shortcut Icon" type="image/x-icon" href="assets/icons/shortcut-icon.ico" />
-	<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="js/jquery-1.11.2.min.js"><\/script>')</script>
-	<script src="js/modernizr.js"></script>
-	<script src="js/main.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Servicios</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="Shortcut Icon" type="image/x-icon" href="assets/icons/shortcut-icon.ico" />
+    <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/jquery-1.11.2.min.js"><\/script>')</script>
+    <script src="js/modernizr.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </head>
+
 <body>
     <div class="page-container">
         <nav class="full-reset nav-phonestore">
-           <div class="logo tittles-pages">
-                PhoneStore 
-           </div>
+            <div class="logo tittles-pages">
+                ElectroCarly
+            </div>
             <ul class="list-unstyled full-reset navigation-list">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="product.html">Productos</a></li>
@@ -36,15 +38,29 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-xs-12 text-center">
-                            <h2 class="tittles-pages">Acerca de PhoneStore</h2>
+                            <h2 class="tittles-pages">Acerca de ElectroCarly</h2>
                             <i class="fa fa-tablet fa-5x"></i> &nbsp; <i class="fa fa-mobile fa-5x"></i>
                             <p class="lead">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem fuga quod dolores cumque in doloremque maiores velit unde mollitia praesentium, blanditiis, suscipit hic! Est eos laborum veniam ratione voluptate assumenda.
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe consequuntur vero, explicabo quaerat, ipsam deleniti accusamus nobis repellendus quis praesentium, error, enim sint asperiores adipisci id veniam non suscipit neque!
+                                En <b>ElectroCarly</b>, creemos que la tecnología es más que dispositivos; es la
+                                conexión entre las personas, las ideas y el mundo. Desde nuestros inicios, hemos
+                                trabajado con pasión para ofrecerte una experiencia única en la compra de celulares y
+                                accesorios. Nuestro objetivo principal es brindarte productos de alta calidad, al mejor
+                                precio y con la garantía de un servicio personalizado que te haga sentir respaldado en
+                                cada paso. Sabemos que un celular no es solo un medio de comunicación, sino una
+                                herramienta esencial para el trabajo, el entretenimiento y la vida diaria. Por eso,
+                                seleccionamos cuidadosamente cada modelo y accesorio, asegurándonos de que tengas acceso
+                                a las marcas más reconocidas y las innovaciones más recientes del mercado.
                             </p>
                             <p class="lead">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem fuga quod dolores cumque in doloremque maiores velit unde mollitia praesentium, blanditiis, suscipit hic! Est eos laborum veniam ratione voluptate assumenda.
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe consequuntur vero, explicabo quaerat, ipsam deleniti accusamus nobis repellendus quis praesentium, error, enim sint asperiores adipisci id veniam non suscipit neque!
+                                Además, en <b>ElectroCarly</b>, no solo vendemos tecnología; construimos relaciones
+                                basadas en
+                                la confianza y la satisfacción de nuestros clientes. Nos esforzamos por ofrecer
+                                soluciones completas, desde reparaciones rápidas y confiables hasta una amplia gama de
+                                accesorios compatibles y estilizados que se adaptan a tu estilo de vida. Nuestro equipo
+                                de expertos está siempre listo para resolver tus inquietudes, asesorarte en tus compras
+                                y garantizar que tu experiencia con nosotros sea más que satisfactoria. Nos enorgullece
+                                ser parte de tu día a día y ayudarte a mantenerte conectado con el mundo. Porque en
+                                ElectroCarly, más que una tienda en línea, somos tu aliado tecnológico.
                             </p>
                         </div>
                         <div class="col-xs-12">
@@ -52,46 +68,60 @@
                             <div class="principal-container-services">
                                 <a href="#!">
                                     <p class="icon-service"><i class="fa fa-briefcase"></i></p>
-                                    <p class="tittle-service">Título Servicio</p>
+                                    <p class="tittle-service">Accesorios</p>
                                     <p class="description-service">
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga dolores ea nostrum in at, sequi quae dicta praesentium ad veritatis, saepe a commodi assumenda nobis corporis voluptates officiis ipsa illo?
+                                        🎧 ¡Completa tu experiencia con los mejores accesorios! <br>
+                                        En <b>ElectroCarly</b>, tenemos todo lo que necesitas para maximizar el
+                                        potencial de tu celular: cargadores, audífonos, fundas y mucho más. Si tienes
+                                        dudas o buscas un accesorio específico, estamos aquí para ayudarte.
                                     </p>
                                 </a>
-                                <a href="#!">
+                                <a href="contact.html">
                                     <p class="icon-service"><i class="fa fa-envelope"></i></p>
-                                    <p class="tittle-service">Título Servicio</p>
+                                    <p class="tittle-service">Contactanos</p>
                                     <p class="description-service">
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga dolores ea nostrum in at, sequi quae dicta praesentium ad veritatis, saepe a commodi assumenda nobis corporis voluptates officiis ipsa illo?
+                                        💌 ¡Estamos aquí para ayudarte! <br>
+
+                                        En <b> ElectroCarly</b>, valoramos tus dudas, comentarios o sugerencias. Si
+                                        tienes preguntas sobre nuestros productos, servicios o necesitas asistencia, no
+                                        dudes en escribirnos.
                                     </p>
                                 </a>
-                                <a href="#!">
+                                <a href="contact.html">
                                     <p class="icon-service"><i class="fa fa-wrench"></i></p>
-                                    <p class="tittle-service">Título Servicio</p>
+                                    <p class="tittle-service">Reparacion</p>
                                     <p class="description-service">
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga dolores ea nostrum in at, sequi quae dicta praesentium ad veritatis, saepe a commodi assumenda nobis corporis voluptates officiis ipsa illo?
+                                        🛠️ ¡Confía en nosotros para reparar tu dispositivo! <br>
+                                        En <b>ElectroCarly</b>, sabemos lo importante que es tu celular en tu día a día.
+                                        Si necesitas una reparación rápida y confiable, estamos aquí para ayudarte.
                                     </p>
                                 </a>
-                                <a href="#!">
+                                <a href="contact.html">
                                     <p class="icon-service"><i class="fa fa-truck"></i></p>
                                     <p class="tittle-service">Título Servicio</p>
                                     <p class="description-service">
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga dolores ea nostrum in at, sequi quae dicta praesentium ad veritatis, saepe a commodi assumenda nobis corporis voluptates officiis ipsa illo?
+                                        📦 ¿Tu pedido no llegó como esperabas? <br>
+
+                                        En ElectroCarly, nos comprometemos a garantizar que tus compras lleguen a tiempo
+                                        y en perfectas condiciones. Sabemos lo importante que es recibir tus productos
+                                        sin inconvenientes, y estamos aquí para ayudarte a resolver cualquier problema
+                                        con tu entrega.
                                     </p>
                                 </a>
                             </div>
                         </div>
                     </div>
                 </div>
-            </section> 
+            </section>
         </div>
-    	<footer class="footer">
+        <footer class="footer">
             <div class="container-fluid">
                 <div class="col-xs-12 text-center">
                     <h3>Siguenos en</h3>
                     <ul class="list-unstyled list-social-icons">
-                        <li >
+                        <li>
                             <a href="#!">
-                               <i class="fa fa-facebook" style="background-color: #3B5998;"></i> 
+                                <i class="fa fa-facebook" style="background-color: #3B5998;"></i>
                             </a>
                         </li>
                         <li>
@@ -101,7 +131,7 @@
                         </li>
                         <li>
                             <a href="#!">
-                                <i class="fa fa-twitter"  style="background-color: #56A3D9;"></i>
+                                <i class="fa fa-twitter" style="background-color: #56A3D9;"></i>
                             </a>
                         </li>
                         <li>
@@ -110,10 +140,11 @@
                             </a>
                         </li>
                     </ul>
-                    <h4>PhoneStore &copy; 2016</h4>
+                    <h4>ElectroCarly &copy; 2024</h4>
                 </div>
             </div>
         </footer>
     </div>
 </body>
+
 </html>
