--- a/news.html
+++ b/news.html
@@ -28,6 +28,7 @@
                 <li><a href="news.html">Noticias</a></li>
                 <li><a href="services.html">Servicios</a></li>
                 <li><a href="contact.html">Contactenos</a></li>
+                <li><a href="admin/">Login</a></li>
             </ul>
             <i class="fa fa-bars visible-xs btn-mobile"></i>
         </nav>
